.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Plan__c.object
<CustomObject>
    <description>Test Plans are pre-defined packages of test scenarios accompanied with a target environment for execution. Test Plans are a convenient way to control both the order tests are executed, their degree of parallelisation and to override environment and data sets used for execution.</description>
    <fields>
        <fullName>provar__Acc_Pass_Rate__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The acceptable pass rate can be used to set thresholds for the test plan status. You may have failing tests but these are not critical or frequent enough to prevent you accepting the change. The acceptable pass rate can be measured against the actual pass rate achieved in execution</description>
        <inlineHelpText>What pass rate is deemed acceptable</inlineHelpText>
        <label>Acceptable Pass Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>provar__Acceptance_Criteria__c</fullName>
        <inlineHelpText>Describe the requirements or criteria that must be met to pass the test</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Constraints__c</fullName>
        <label>Constraints</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Coverage__c</fullName>
        <inlineHelpText>Describe what will be covered by this test plan (e.g. components, requirements, processes, etc.)  and how coverage will be measured</inlineHelpText>
        <label>Coverage</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Defect_Management__c</fullName>
        <inlineHelpText>Describe the approach to managing defects (e.g. process, tools, severity levels)</inlineHelpText>
        <label>Defect Management</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Definitions_Acronyms__c</fullName>
        <label>Definitions &amp; Acronyms</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__File_Path__c</fullName>
        <description>Used to store relative or absolute file paths for test plans that exist as files somewhere else</description>
        <inlineHelpText>Used to store relative or absolute file paths for test plans that exist as files somewhere else</inlineHelpText>
        <label>File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Frequency__c</fullName>
        <description>The frequency this test plan should be used. This can be used to audit whether the executions match the expected frequency or if a test plan is being run more or less often than expected. The frequency will be used by the Scheduler component as a default</description>
        <inlineHelpText>Select the frequency for executing this test plan. If the plan is executed as part of a deployment pipeline then choose Pipeline.</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad hoc</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Number_of_Risks__c</fullName>
        <label>Number of Risks</label>
        <summaryForeignKey>provar__Risk__c.provar__Test_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Objectives__c</fullName>
        <inlineHelpText>Describe the purpose and objectives of this test plan</inlineHelpText>
        <label>Objectives</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Out_of_Scope__c</fullName>
        <description>Features not to be tested in this plan.</description>
        <inlineHelpText>Provide a description of any features specifically excluded from this test plan</inlineHelpText>
        <label>Out of Scope</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Parent_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Plan</label>
        <referenceTo>provar__Test_Plan__c</referenceTo>
        <relationshipLabel>Child Plans</relationshipLabel>
        <relationshipName>Child_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Resumption_Requirements__c</fullName>
        <inlineHelpText>Define the criteria used to resume testing</inlineHelpText>
        <label>Resumption Requirements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Risk_Level__c</fullName>
        <formula>IF(  provar__Risk_Score__c &lt;= 5, &quot;Very Low&quot;,
  IF( provar__Risk_Score__c &lt;= 11, &quot;Low&quot;,
    IF( provar__Risk_Score__c &lt;= 19, &quot;Moderate&quot;,
      IF( provar__Risk_Score__c &lt;= 24, &quot;High&quot;,
        &quot;Very High&quot;)
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Risk_Score__c</fullName>
        <formula>provar__Total_Risk_Score__c /  provar__Number_of_Risks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Scope__c</fullName>
        <description>A description of the features in scope for this test plan</description>
        <inlineHelpText>Provide a brief description of the features that are in scope for this plan.</inlineHelpText>
        <label>In Scope</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Suspension_Criteria__c</fullName>
        <inlineHelpText>Describe the criteria used to suspend testing</inlineHelpText>
        <label>Suspension Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__System_Overview__c</fullName>
        <inlineHelpText>Describe what systems are involved in this plan and how they interact. You can also include diagrams</inlineHelpText>
        <label>System Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Team_Reviews__c</fullName>
        <inlineHelpText>Describe what reviews will be conducted (e.g. test case, test progress), by whom, and when</inlineHelpText>
        <label>Team Reviews</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Test_Data__c</fullName>
        <inlineHelpText>Describe how and when test data will be sourced</inlineHelpText>
        <label>Test Data</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Test_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Parent project for this test plan. Plans can be re-used across projects depending on your object sharing settings. For reporting purposes and data migration projects are a great way of moving complete hierarchies of test plans and results.</description>
        <inlineHelpText>Select the parent project for this test plan. This makes it easy to manage and share you test data with your colleagues.</inlineHelpText>
        <label>Test Project</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or the project may have been archived</errorMessage>
            <filterItems>
                <field>provar__Test_Project__c.provar__Archived__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>The selected project may have already been archived and can no longer be selected, nor can changes be made for test plans belonging to archived projects. You must select a new active project to change the test plan.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>provar__Test_Project__c</referenceTo>
        <relationshipLabel>Test Plans</relationshipLabel>
        <relationshipName>Test_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Test_Tools__c</fullName>
        <label>Test Tools</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Test_Types__c</fullName>
        <inlineHelpText>Select all the testing types considered for this plan</inlineHelpText>
        <label>Testing Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Testing_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Testing_Methodology__c</fullName>
        <inlineHelpText>Sometimes it matches the development methodology</inlineHelpText>
        <label>Testing Methodology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waterfall</fullName>
                </value>
                <value>
                    <fullName>Agile</fullName>
                </value>
                <value>
                    <fullName>Iterative</fullName>
                </value>
                <value>
                    <fullName>DevOps</fullName>
                </value>
                <value>
                    <fullName>V-Model</fullName>
                </value>
                <value>
                    <fullName>Spiral</fullName>
                </value>
                <value>
                    <fullName>Extreme Programming (XP)</fullName>
                </value>
                <value>
                    <fullName>Rapid Application Development (RAD)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Total_Effort_Days__c</fullName>
        <label>Total Effort (Days)</label>
        <summarizedField>provar__Feature__c.provar__Effort_Days__c</summarizedField>
        <summaryFilterItems>
            <field>provar__Feature__c.provar__In_Scope__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>provar__Feature__c.provar__Test_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Total_Risk_Score__c</fullName>
        <label>Total Risk Score</label>
        <summarizedField>provar__Risk__c.provar__Risk_Score__c</summarizedField>
        <summaryForeignKey>provar__Risk__c.provar__Test_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Training__c</fullName>
        <inlineHelpText>Describe the approach to training the team members</inlineHelpText>
        <label>Training</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Test Plan</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Test_Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>